name for their first argument (resp. x, q, p for d, p, q functions).
- add the possibility to change the title of the CDF plot in plotdistcens() using the argument main.


BUG FIXES
- bug fixed concerning the use of gofstat with a chi squared df <=0 (error message blocking the other functions)
- bug fix in mledist() when bounds were set (so not NULL) for censored MLE

Version 1.0-9
=============
- update the FAQ with linear inequality constraints.

Version 1.0-8
=============
NEW FEATURES
- support the use of ggplot2 for cdfcomp, denscomp, qqcomp, ppcomp.

BUG FIXES
- correct legend for qqcomp and ppomp on large data.
- correct weights in mmedist.
- correct the name Akaike in gofstat.
- correct the use of trueval in plot.bootdist.
- correct the vignette on truncate (inflated) distributions.

Version 1.0-7
=============

NEW FEATURES
- keep the JSS vignette as a pdf.
- start the FAQ vignette and add datasets (?dataFAQ) for it.
- provide likelihood plot/surface/curve: llplot, llcurve, llsurface.
- provide parallelization of bootstrap in bootdist and bootdistcens.
- provide graphic of (e)cdf with bootstraped confidence interval/area: CIcdfplot.
- allow the use of constrOptim() in mledist, mmedist, mgedist, qmedist functions.
- add a possible pre-fitting procedure: prefit.

BUG FIXES
- add invisible() for all graphical functions.
- bug fixed concerning the use of weights on censored data.


Version 1.0-6
=============

BUG FIXES
- automatic definition of starting values for distributions "llogis" and "invweibull"
is now working.

Version 1.0-5
=============
NEW FEATURES
- update starting/fixing values in mledist, mmedist, mgedist, qmedist functions.
- update graphics for bootstrap procedure.
- add argument do.points in cdfcomp.
- add argument weights in mledist, qmedist, mmedist, fitdist, fitdistcens.
- add argument keepdata in fitdist, fitdistcens.
- suppress warnings/errors in fitdist(cens), bootdist(cens).

BUG FIXES
- defensive programming in plotdist, cdfcomp,...